--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@babel/preset-react": "^7.9.4",
     "@fdaciuk/ajax": "^3.0.4",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
+    "html-webpack-plugin": "^4.3.0",
+    "prop-types": "^15.7.2",
+    "raw-loader": "^4.0.1",
+    "style-loader": "^1.2.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
