--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@babel/preset-react": "^7.9.4",
     "@fdaciuk/ajax": "^3.0.4",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "prop-types": "^15.7.2",
-    "raw-loader": "^4.0.1",
     "style-loader": "^1.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
+    "webpack-dashboard": "^3.2.0",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
@@ -23,6 +26,7 @@
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server --progress --colors --inline --hot"
+    "dev": "webpack-dev-server --progress --colors --inline --hot",
+    "build": "webpack-dev-server --progress --config webpack.prod.config -p"
   }
 }
