--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fdaciuk/ajax": "^3.0.4",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -27,6 +28,6 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --inline --hot",
-    "build": "webpack-dev-server --progress --config webpack.prod.config -p"
+    "build": " cross-env NODE_ENV=production webpack-dev-server --progress --config webpack.prod.config -p"
   }
 }
