--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@fdaciuk/ajax": "^3.0.4",
+    "@storybook/cli": "^5.3.18",
+    "@storybook/react": "^5.3.18",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
@@ -28,6 +30,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --inline --hot",
-    "build": " cross-env NODE_ENV=production webpack-dev-server --progress --config webpack.prod.config -p"
+    "build": " cross-env NODE_ENV=production webpack-dev-server --progress --config webpack.prod.config -p",
+    "storybook": "start-storybook"
   }
 }
